# kernel_motorola_mt6879-modules

motorola/drivers/input/misc/anc_fps_mmi/: BUILD.bazel  jiiov_config.h  jiiov_netlink.c  jiiov_platform.c  jiiov_platform.h
motorola/drivers/input/misc/ets_fod_mmi_u/: Android.mk  BUILD.bazel  Kbuild  etxxx_fp.c
motorola/drivers/input/touchscreen/focaltech_mtk_v3_mmi/: focaltech_core.c
motorola/drivers/input/touchscreen/goodix_berlin_u_mmi/: Kbuild  goodix_brl_hw.c  goodix_ts_core.c  goodix_ts_mmi.c
motorola/drivers/input/touchscreen/goodix_gt96x_u_mmi/: goodix_ts_core.c  goodix_ts_mmi.h
motorola/drivers/misc/awinic/aw86927/: haptic_hv.c
motorola/drivers/misc/sx937x_multi/: sx937x_multi.c
motorola/drivers/moto_mmap_fault/: BUILD.bazel
motorola/drivers/power/bq25980_mmi/: bq25980_mmi.c
motorola/drivers/power/cps4038_mmi/: BUILD.bazel  Kbuild  wls_charger_cps4038.c  wls_charger_cps4038.h
motorola/drivers/power/cps4041_mmi/: moto_wls_auth2.0.h  wls_charger_cps4041.c  wls_charger_cps4041.h
motorola/drivers/power/cw2217b_fg_mmi/: cw2217B_fuel_gauge_base.c
motorola/drivers/power/mmi_decrete_charger_cp_qc3p/: mmi_charger_pump_policy.c
motorola/drivers/power/mmi_pephv/: Android.mk  BUILD.bazel  Kbuild  mmi_pehv.c  mmi_pehv.h  mmi_pehv_hal.c
motorola/drivers/power/nfg1000_fg_mmi/: BUILD.bazel  Kbuild  Makefile  nfg1000_fg_mmi.c
motorola/drivers/power/sc760x_charger_mmi/: sc760x_charger_mmi.c  sc760x_charger_mmi.h
motorola/drivers/power/sc8549d/: sc8546d_charger.c
motorola/drivers/power/smart_battery/: smart_battery_core.c  smart_battery_core.h
(+30 files in other folders)
