load("//build/bazel_mgk_rules:mgk_ko.bzl", "define_mgk_ko")

package(
    default_visibility = [
        "//visibility:public",
    ],
)

define_mgk_ko(
    name = "mmi_pephv",
    srcs = glob([
        "*.c",
        "*.h",
        "Kbuild",
        "Makefile",
        "Makefile.include",
    ]),

    outs = ["mmi_pephv.ko"],
)
